objects/Survey_Response__c.object
<CustomObject>
    <description>Represents information about a participant’s collective responses to a survey. Part of custom survey solution that replaced native Salesforce Surveys solution.</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NotStarted</fullName>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>The Survey in play for this Survey Response record.</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account associated with this Survey Response record.</description>
        <formula>HYPERLINK( &quot;/&quot; &amp; Survey_Invitation__r.Account__c, Survey_Invitation__r.Account__r.Name)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the survey response record.</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterviewGuid__c</fullName>
        <description>Legacy field from Salesforce Surveys SurveyResponse object.</description>
        <label>InterviewGuid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Survey Invitation related to this survey response.</description>
        <label>Survey Invitation</label>
        <referenceTo>Survey_Invitation__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Submitter_Id__c</fullName>
        <description>Historical field to reference the user that submitted the survey response record.</description>
        <label>Legacy Submitter Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Time__c</fullName>
        <description>The date/time the survey response was submitted and completed.</description>
        <label>Completion Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Version_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Id for the corresponding, historical Salesforce Survey Version record.</description>
        <label>Legacy Survey Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Feedback_Status__c</fullName>
        <description>Used to control automation (flow) that keys off of survey response object. Indicates if any of the optional fields were filled out on the survey.</description>
        <label>Optional Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Response_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Survey Response Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>